Updates to Potato Clicker

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <button id="createPotato">Pick Potato</button>
                     <button id="sellPotato">Sell Potato</button>
                 </div>
+
+                <imput type="range" min="1" max="100"  class="Sell_Price">
+
                 
             </div>
 
